# planet_crs_registry

./: .gitignore  .pre-commit-config.yaml  .pypirc  .travis.yml  AUTHORS.rst  CHANGELOG  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_gml.txt  setup.py  tox.ini
apache-sis-1.4/conf/: setenv.bat
apache-sis-1.4/log/: sis.log.1  sis.log.11  sis.log.14  sis.log.15  sis.log.3  sis.log.4  sis.log.6  sis.log.7  sis.log.8
certificates/: README
compose/: README.rst  compose.yaml  crs_registry-server.yaml  observability.yaml  telemetry.drawio.html
compose/confs/api/: planet_crs_registry.conf
compose/confs/grafana/alloy/: config.alloy
compose/envs/: otel.env
data/: README.md  gml_generator.py
data/gml/: IAU_1000_2015.xml  IAU_2015_1000.xml  IAU_2015_100000500.xml  IAU_2015_100000510.xml  IAU_2015_100000515.xml  IAU_2015_100000520.xml  IAU_2015_100000525.xml  IAU_2015_100000530.xml  IAU_2015_100000535.xml  IAU_2015_100000540.xml  IAU_2015_100000545.xml  IAU_2015_100000550.xml  IAU_2015_100000555.xml  IAU_2015_100000560.xml  IAU_2015_100000565.xml  IAU_2015_100000570.xml  IAU_2015_100000575.xml  IAU_2015_100000580.xml  IAU_2015_100000585.xml  IAU_2015_100000590.xml  IAU_2015_100001200.xml  IAU_2015_100001210.xml  IAU_2015_100001215.xml  IAU_2015_100001220.xml  IAU_2015_100001225.xml  IAU_2015_100001230.xml  IAU_2015_100001235.xml  IAU_2015_100001240.xml  IAU_2015_100001245.xml  IAU_2015_100001250.xml  IAU_2015_100001255.xml  IAU_2015_100001260.xml  IAU_2015_100001265.xml  IAU_2015_100001270.xml  IAU_2015_100001275.xml  IAU_2015_100001280.xml  IAU_2015_100001285.xml  IAU_2015_100001290.xml  IAU_2015_100003600.xml  IAU_2015_100003602.xml  (+2234 more)
docker/: Dockerfile  Dockerfile-dev  build.sh  commit-dev.sh  deploy.sh  remove-dev.sh  run-dev.sh
docs/source/: conf.py  index.rst  modules.rst
planet_crs_registry/: __init__.py  __main__.py  _version.py  custom_logging.py  initializer.py  logging.conf  monitoring.py  planet_crs_registry.py  server.py
planet_crs_registry/conf/: planet_crs_registry.conf
planet_crs_registry/config/: __init__.py  base.py  cfg.py  db.py  openapi.py
planet_crs_registry/core/: __init__.py
planet_crs_registry/core/business/: __init__.py  crs_response.py  database.py  search.py  wkt_database.py
planet_crs_registry/core/exceptions/: __init__.py  exceptions.py  handlers.py
planet_crs_registry/core/models/: __init__.py
planet_crs_registry/core/routers/: __init__.py  website_router.py  ws_router.py
scripts/: data_download.py  init_remote_repo.bash
templates/: 404.html  about_us.html  formula.html  how_to_decode_wkt2.html  how_to_use_ids.html  index.html  results-table.html
tests/: planet_crs_registry_test.py  urls.sh
tests/conf/: planet_crs_registry.conf
web/: 404.html  about-us-1.html  contact-us-1.html  index.html
web/assets/css/: pe-icons.css  plugins.css  style.css
web/assets/js/: init.js  plugins.js
(+13 files in other folders)
